--- a/index.html
+++ b/index.html
@@ -2,9 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>grandmother-s kittens</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="page">
+    <header class="page__header">
+        <h1>Бабуленькины котятки</h1>
+    </header>
+    <main class="page__content main">
+        <nav class="main__navigation">
+            <ul class="navigation__list">
+                <li class="navigation__item">Абиссинская</li>
+                <li class="navigation__item">Британская</li>
+                <li class="navigation__item">Русская голубая</li>
+                <li class="navigation__item">Сиамская</li>
+            </ul>
+        </nav>
 
+        <section class="main__content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consequuntur doloribus neque quaerat repellat. Beatae incidunt modi nesciunt officiis repudiandae. A consequatur debitis dolor fuga, impedit laboriosam molestiae non optio.
+        </section>
+
+        <aside class="main__sidebar">
+            <article class="rating">
+                <h3 class="rating__title">Рейтинг</h3>
+                <p class="rating__control"><label for="rating">по убыванию</label><input type="checkbox" id="rating"></p>
+                <ul class="rating__list">
+                    <li>
+                        <div class="rating__subtitle">Абиссинская</div>
+                        <div class="rating__gradient"></div>
+                    </li>
+                    <li>
+                        <div class="rating__subtitle">Британская</div>
+                        <div class="rating__gradient"></div>
+                    </li>
+                    <li>
+                        <div class="rating__subtitle">Русская голубая</div>
+                        <div class="rating__gradient"></div>
+                    </li>
+                    <li>
+                        <div class="rating__subtitle">Сиамская</div>
+                        <div class="rating__gradient"></div>
+                    </li>
+                </ul>
+            </article>
+
+        </aside>
+    </main>
+    <footer class="page__footer">
+        © ООО Бабуленькины котятки, 2015
+        <address class="page__footer-address">
+            Наш адрес: улица Котовая д.5
+        </address>
+    </footer>
 </body>
 </html>
