--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
                 <h3 class="rating__title">Рейтинг</h3>
                 <p class="rating__control"><label for="rating">по убыванию</label><input type="checkbox" id="rating"></p>
                 <ul class="rating__list">
-                    <li>
+                    <li data-rating="10">
                         <div class="rating__subtitle">Абиссинская</div>
                         <div class="rating__gradient"></div>
                     </li>
-                    <li>
+                    <li data-rating="9">
                         <div class="rating__subtitle">Британская</div>
                         <div class="rating__gradient"></div>
                     </li>
-                    <li>
+                    <li data-rating="8">
                         <div class="rating__subtitle">Русская голубая</div>
                         <div class="rating__gradient"></div>
                     </li>
-                    <li>
+                    <li data-rating="4">
                         <div class="rating__subtitle">Сиамская</div>
                         <div class="rating__gradient"></div>
                     </li>
