--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <aside class="main__sidebar">
             <article class="rating">
                 <h3 class="rating__title">Рейтинг</h3>
-                <p class="rating__control"><label for="rating">по убыванию</label><input type="checkbox" id="rating"></p>
+                <input type="checkbox" id="rating">
+                <p class="rating__control"><label class="rating__pseudo"  for="rating">по убыванию</label></p>
+
                 <ul class="rating__list">
                     <li data-rating="10">
                         <div class="rating__subtitle">Абиссинская</div>
