--- a/index.html
+++ b/index.html
@@ -19,8 +19,57 @@
             </ul>
         </nav>
 
-        <section class="main__content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consequuntur doloribus neque quaerat repellat. Beatae incidunt modi nesciunt officiis repudiandae. A consequatur debitis dolor fuga, impedit laboriosam molestiae non optio.
+        <section class="main__content grid">
+            <div class="grid__a">
+                <figure class="figure">
+                    <img class="figure__img" src="imgs/fa123f58c1c49f74d35561cece71fa06.jpg" alt="">
+                    <figcaption class="figure__caption">Котенька</figcaption>
+                </figure>
+            </div>
+
+            <div class="grid__b">
+                <figure class="figure">
+                    <img class="figure__img" src="imgs/Fotolia_14485377_Subscription_XL.jpg" alt="">
+                    <figcaption class="figure__caption">Котенька</figcaption>
+                </figure>
+            </div>
+
+            <div>
+                <figure class="figure">
+                    <img class="figure__img" src="imgs/30911461.jpg" alt="">
+                    <figcaption class="figure__caption">Котенька</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure class="figure">
+                    <img class="figure__img" src="imgs/images.jpeg" alt="">
+                    <figcaption class="figure__caption">Котенька</figcaption>
+                </figure>
+            </div>
+            <div>
+                <figure class="figure">
+                    <img class="figure__img" src="imgs/depositphotos_12183602-stock-photo-cat-kitten-on-white-background.jpg" alt="">
+                    <figcaption class="figure__caption">Котенька</figcaption>
+                </figure>
+            </div>
+            <div class="grid__g">
+                <figure class="figure">
+                    <img class="figure__img" src="imgs/kotenok-i-miska.jpg" alt="">
+                    <figcaption class="figure__caption">Котенька</figcaption>
+                </figure>
+            </div>
+            <div class="grid__z">
+                <figure class="figure">
+                    <img class="figure__img" src="imgs/1322437395_01.jpg" alt="">
+                    <figcaption class="figure__caption">Котенька</figcaption>
+                </figure>
+            </div>
+            <div class="grid__h">
+                <figure class="figure">
+                    <img class="figure__img" src="imgs/kotenok_cheshet_uho.jpg" alt="">
+                    <figcaption class="figure__caption">Котенька</figcaption>
+                </figure>
+            </div>
         </section>
 
         <aside class="main__sidebar">
@@ -30,21 +79,29 @@
                 <p class="rating__control"><label class="rating__pseudo"  for="rating">по убыванию</label></p>
 
                 <ul class="rating__list">
-                    <li data-rating="10">
+                    <li data-rating="100">
                         <div class="rating__subtitle">Абиссинская</div>
-                        <div class="rating__gradient"></div>
+                        <div class="rating__gradient">
+                            <i>10</i>
+                        </div>
                     </li>
-                    <li data-rating="9">
+                    <li data-rating="90">
                         <div class="rating__subtitle">Британская</div>
-                        <div class="rating__gradient"></div>
+                        <div class="rating__gradient">
+                            <i>9</i>
+                        </div>
                     </li>
-                    <li data-rating="8">
+                    <li data-rating="80">
                         <div class="rating__subtitle">Русская голубая</div>
-                        <div class="rating__gradient"></div>
+                        <div class="rating__gradient">
+                            <i>8</i>
+                        </div>
                     </li>
-                    <li data-rating="4">
+                    <li data-rating="40">
                         <div class="rating__subtitle">Сиамская</div>
-                        <div class="rating__gradient"></div>
+                        <div class="rating__gradient">
+                            <i>4</i>
+                        </div>
                     </li>
                 </ul>
             </article>
