--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Бабуленькины котятки</h1>
     </header>
     <main class="page__content main">
-        <input name="breed" type="radio" id="breed-1">
+        <input name="breed" type="radio" checked id="breed-1">
         <input name="breed" type="radio" id="breed-2">
         <input name="breed" type="radio" id="breed-3">
         <input name="breed" type="radio" id="breed-4">
@@ -32,57 +32,30 @@
         </nav>
 
         <section class="main__content grid">
-            <div class="grid__a">
-                <figure class="figure">
-                    <img data-breed="breed-1" class="figure__img" src="imgs/fa123f58c1c49f74d35561cece71fa06.jpg" alt="">
-                    <figcaption class="figure__caption">Котенька</figcaption>
-                </figure>
-            </div>
-
-            <div class="grid__b">
-                <figure class="figure">
-                    <img data-breed="breed-2" class="figure__img" src="imgs/Fotolia_14485377_Subscription_XL.jpg" alt="">
-                    <figcaption class="figure__caption">Котенька</figcaption>
-                </figure>
-            </div>
-
-            <div>
-                <figure class="figure">
-                    <img data-breed="breed-3" class="figure__img" src="imgs/30911461.jpg" alt="">
-                    <figcaption class="figure__caption">Котенька</figcaption>
-                </figure>
-            </div>
-            <div>
-                <figure class="figure">
-                    <img data-breed="breed-1" class="figure__img" src="imgs/images.jpeg" alt="">
-                    <figcaption class="figure__caption">Котенька</figcaption>
-                </figure>
-            </div>
-            <div>
-                <figure class="figure">
-                    <img data-breed="breed-4" class="figure__img" src="imgs/depositphotos_12183602-stock-photo-cat-kitten-on-white-background.jpg" alt="">
-                    <figcaption class="figure__caption">Котенька</figcaption>
-                </figure>
-            </div>
-            <div class="grid__g">
-                <figure class="figure">
-                    <img data-breed="breed-2" class="figure__img" src="imgs/kotenok-i-miska.jpg" alt="">
-                    <figcaption class="figure__caption">Котенька</figcaption>
-                </figure>
-            </div>
-            <div class="grid__z">
-                <figure class="figure">
-                    <img data-breed="breed-1" class="figure__img" src="imgs/1322437395_01.jpg" alt="">
-                    <figcaption class="figure__caption">Котенька</figcaption>
-                </figure>
-            </div>
-            <div class="grid__h">
-                <figure class="figure">
-                    <img data-breed="breed-3" class="figure__img" src="imgs/kotenok_cheshet_uho.jpg" alt="">
-                    <figcaption class="figure__caption">Котенька</figcaption>
-                </figure>
-            </div>
-
+            <figure data-caption="Котейка - 1" class="figure grid__item">
+                <img data-breed="breed-1" class="figure__img" src="imgs/fa123f58c1c49f74d35561cece71fa06.jpg" alt="">
+            </figure>
+            <figure data-caption="Котейка - 2" class="figure grid__item">
+                <img data-breed="breed-2" class="figure__img" src="imgs/Fotolia_14485377_Subscription_XL.jpg" alt="">
+            </figure>
+            <figure data-caption="Котейка - 3" class="figure grid__item">
+                <img data-breed="breed-3" class="figure__img" src="imgs/30911461.jpg" alt="">
+            </figure>
+            <figure data-caption="Котейка - 4" class="figure grid__item">
+                <img data-breed="breed-1" class="figure__img" src="imgs/images.jpeg" alt="">
+            </figure>
+            <figure data-caption="Котейка - 5" class="figure grid__item">
+                <img data-breed="breed-4" class="figure__img" src="imgs/depositphotos_12183602-stock-photo-cat-kitten-on-white-background.jpg" alt="">
+            </figure>
+            <figure data-caption="Котейка - 6" class="figure grid__item">
+                <img data-breed="breed-2" class="figure__img" src="imgs/kotenok-i-miska.jpg" alt="">
+            </figure>
+            <figure data-caption="Котейка - 7" class="figure grid__item">
+                <img data-breed="breed-1" class="figure__img" src="imgs/1322437395_01.jpg" alt="">
+            </figure>
+            <figure data-caption="Котейка - 8" class="figure grid__item">
+                <img data-breed="breed-3" class="figure__img" src="imgs/kotenok_cheshet_uho.jpg" alt="">
+            </figure>
 
         </section>
 
